# group4-noaa-temp-analyzer

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  main.py  pyproject.toml
ai_logs_and_declaration_of_ai_use/: ai_log_Friedrich_Vincent_Löwe.md  ai_log_Tony_Baudis.md  ai_log_Yusuf_Bildik.md
ai_logs_and_declaration_of_ai_use/ai_log_Prem_Murugaraj/: ai_log_Prem_Murugaraj.md  chatgpt_log.txt
ai_logs_and_declaration_of_ai_use/ai_log_Yusuf_Bildik/: ai_log_Yusuf_Bildik.md
src/noaa_temp_analyzer/: __init__.py  __main__.py  analysis.py  cleaner.py  cli.py  downloader.py  loader.py  plotting.py
src/noaa_temp_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_cleaner.py  test_cli.py  test_downloader.py  test_loader.py  test_plotting.py
